Tue Nov 20 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed 2 off-by-one buffer overflow/underflow errors
	- Released 0.0.9a

Thu Nov 01 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed up wrong-type-of-long code for MinGW using GCC 4
	- Test framework is now a little more verbose
	- Cleanued up Makefile a bit regarding test framework

Wed Aug 22 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Released 0.0.9

Tue Aug 21 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Implemented build-gen script to reduce chance of build error

Mon Aug 20 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Implemented 64-bit seeking to support files larger than 2GiB
	- Fixed issue where miniwebserver lists dir or returns default page
	  when trailing slash is missing

Tue Aug 14 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Added the nogui windows build target
	- Implemented initial test framework

Thu Aug 02 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- FreeBSD implementation

Wed Aug 01 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed some spelling mistakes :P

Tue Jun 26 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- MiniWebSvr now prints message on bad parameter
	- Short parameter support
	- Version is now specified in Makefile

Sat Jun 16 2007 Daniel Walker <djwalker at users.sourceforge.net>
	- Since THREAD_POOL and __WIN32__ are not compatible, Win32 builds
	  would fail when THREAD_POOL is defined. It now fails far more cleanly,
	  with advice not to enable THREAD_POOL for Windows.

Tue Jun 12 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Optional winmain entry point, still need to investigate if this is
	  what we want...

Mon May 28 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Renamed --stealth back to --noname
	- Fixed name/version reporting in generated errors